# cogs-189-final-project

./: .gitignore  README.md  pyproject.toml
notebooks/: export_tex_data.py  reference.bib  report.html  report.ipynb  report.tex
notebooks/data/: aggregate_body.tex  familiarity_body.tex  macros.tex  persubject_body.tex  ratings_body.tex  shap_body.tex  table_aggregate.tex  table_familiarity.tex  table_persubject.tex  table_ratings.tex  table_shap.tex  table_temporal.tex  temporal_body.tex
notebooks/style/: dsc180bibstyle.bst  dsc180reportstyle.sty
src/: classify.py  data.py  eegnet.py  features.py  interpret.py  visualize.py
